@@ -1,0 +1,1 @@
+int *x = new int [2] ();
